<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/logo_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Smart Driving Assistance System"
            android:textSize="40dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorToolbar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:textSize="20sp"
            android:textColor="@color/colorTextView"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:text="@string/license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editType"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:text="@string/locaiton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editLocation"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/btnXacNhan"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/button_text_xac_nhan"
                android:textColor="@color/colorTextView"
                android:textSize="20sp"
                android:layout_width="150dp"
                android:layout_height="70dp" />
            <Button
                android:id="@+id/btnTest"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Test Data"
                android:textColor="@color/colorTextView"
                android:textSize="20sp"
                android:layout_width="150dp"
                android:layout_height="70dp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
