<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/active_dots"
    tools:context=".SignIn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_app"
        android:textSize="40dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorToolbar"/>

    <LinearLayout
        android:id="@+id/logo_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/activity_margin"
            android:layout_marginTop="@dimen/dimen_30" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_container"
        android:layout_marginLeft="@dimen/dimen_30"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/dimen_30"
        android:orientation="vertical">

        <TextView
            android:textSize="20sp"
            android:textColor="@color/colorTextView"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:background="@android:color/holo_blue_light"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_30"
            android:visibility="invisible"
            app:indicatorColor="@android:color/black"
            app:indicatorName="BallPulseIndicator" />
    </LinearLayout>



</RelativeLayout>
